fixed overflow behaviour on all devices

--- a/public/css/account.css
+++ b/public/css/account.css
@@ -4,6 +4,8 @@
     gap: 1rem;
     width: 100%;
     padding: 0 1rem;
+    max-height: 85%;
+    overflow-y: auto;
 }
 
 .icons {
@@ -86,6 +88,7 @@
     border-radius: 8px;
     overflow: hidden;
     border: 2px solid var(--secondary-background-color);
+    cursor: pointer;
 }
 
 .itemImage {
@@ -111,4 +114,10 @@
 
 .itemDesc * {
     margin: 0;
+}
+
+@media only screen and (max-width: 775px) {
+    #achats {
+        max-height: fit-content;
+    }
 }
